fix(instance-control): Improve floating IP handling when unshelving
Changes in `control-instance/action.yml`:
- **Fix instance IP retrieval:** Corrected `auto_allocated_network` indexing to extract the floating IP properly.
- **Improve floating IP assignment:** Ensures `has_ip` is set correctly and detects unassigned matching IPs (`has_ip_unassigned`).
- **Optimize floating IP retrieval:** Prefers an unassigned IP before allocating a new one.
- **Fix floating IP disassociation:** Uses the correct metadata (`check_instance_has_ip.outputs.instance_ip`).

Changes in `create-ip/action.yml`:
- **Add `preferred_ip_address` input:** Allows selecting an existing unassigned IP before creating a new one.
- **Improve floating IP selection:** Uses `preferred_ip_address` if available; otherwise, selects the first unassigned IP.

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -126,12 +126,43 @@ runs:
       run: |
         source ~/venv/bin/activate
 
-        has_ip=$(
+        # Get instance IP
+        instance_ip=$(
           openstack server show $INSTANCE_NAME -c addresses -f json | \
-          jq -r '.addresses.auto_allocated_network[1] != null'
+          jq -r '.addresses.auto_allocated_network | if length > 1 then .[1] else "" end'
         )
-        echo "has_ip [$has_ip]" # "true" or "false"
+        echo "instance_ip [$instance_ip]"
+
+        # Determine if instance already has a floating IP assigned
+        if [[ -n "$instance_ip" ]]; then
+          has_ip="true"
+        else
+          has_ip="false"
+        fi
+        echo "has_ip [$has_ip]"
         echo "has_ip=$has_ip" >> $GITHUB_OUTPUT
+
+        # Check if an unassigned floating IP matches instance IP
+        has_ip_assigned="false"
+        if [[ "$has_ip" == "true" ]]; then
+          json_output=$(openstack floating ip list -f json | jq --arg ip "$instance_ip" 'map(select(.Port != null and ."Floating IP Address" == $ip))')
+          floating_ip_address=$(echo "$json_output" | jq -r 'if length > 0 then .[0]["Floating IP Address"] else "" end')
+
+          if [[ -n "$floating_ip_address" ]]; then
+            has_ip_assigned="true"
+          fi
+        fi
+
+        # If previously assigned IP is not available anymore, discard it.
+        if [[ "$has_ip_assigned" == "false" ]]; then
+          instance_ip=""
+        fi
+
+        echo "instance_ip [$instance_ip]"
+        echo "instance_ip=$instance_ip" >> $GITHUB_OUTPUT
+
+        echo "has_ip_assigned [$has_ip_assigned]"
+        echo "has_ip_assigned=$has_ip_assigned" >> $GITHUB_OUTPUT
       env:
         OS_CLOUD: ${{ inputs.os_cloud }}
         INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
@@ -152,12 +183,14 @@ runs:
     - name: Retrieve or create a floating IP
       if:
         ${{ steps.check_instance.outputs.exists == 'true' && inputs.command_name
-        == 'unshelve' && steps.check_instance_has_ip.outputs.has_ip == 'false'
-        }}
+        == 'unshelve' && steps.check_instance_has_ip.outputs.has_ip_assigned ==
+        'false' }}
       id: ip_create
       uses: ./.github/actions/create-ip
       with:
         os_cloud: ${{ inputs.os_cloud }}
+        preferred_ip_address:
+          ${{ steps.check_instance_has_ip.outputs.instance_ip }}
 
     - name: comment (failed to retrieve or create floating IP)
       if: ${{ steps.ip_create.outcome == 'failure' && failure() }}
@@ -175,8 +208,8 @@ runs:
     - name: Associate floating IP with unshelved instance
       if:
         ${{ steps.check_instance.outputs.exists == 'true' && inputs.command_name
-        == 'unshelve' && steps.check_instance_has_ip.outputs.has_ip == 'false'
-        }}
+        == 'unshelve' && steps.check_instance_has_ip.outputs.has_ip_assigned ==
+        'false' }}
       id: associate_ip
       shell: bash
       run: |
@@ -200,16 +233,6 @@ runs:
           Failed to associate floating IP with unshelved instance.
 
           See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-    - name: Retrieve metadata
-      if:
-        ${{ steps.check_instance.outputs.exists == 'true' && inputs.command_name
-        == 'shelve' && steps.check_instance_has_ip.outputs.has_ip == 'true' }}
-      id: instance_metadata
-      uses: ./.github/actions/retrieve-metadata
-      with:
-        os_cloud: ${{ inputs.os_cloud }}
-        instance_name: ${{ steps.define.outputs.instance_name }}
 
     - name: Execute command
       id: execute_command
@@ -296,7 +319,8 @@ runs:
     - name: Disassociate floating IP from shelved instance
       if:
         ${{ steps.check_instance.outputs.exists == 'true' && inputs.command_name
-        == 'shelve' && steps.check_instance_has_ip.outputs.has_ip == 'true' }}
+        == 'shelve' && steps.check_instance_has_ip.outputs.has_ip == 'true' &&
+        steps.check_instance_has_ip.outputs.has_ip_assigned == 'true' }}
       id: disassociate_ip
       shell: bash
       run: |
@@ -305,7 +329,8 @@ runs:
         openstack server remove floating ip "$INSTANCE_NAME" "$FLOATING_IP_ADDRESS"
       env:
         OS_CLOUD: ${{ inputs.os_cloud }}
-        FLOATING_IP_ADDRESS: ${{ steps.instance_metadata.outputs.instance_ip }}
+        FLOATING_IP_ADDRESS:
+          ${{ steps.check_instance_has_ip.outputs.instance_ip }}
         INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
 
     - name: comment (failed to disassociate floating IP from unshelved instance)
