--- a/.github/workflows/delete-volume-from-workflow.yml
+++ b/.github/workflows/delete-volume-from-workflow.yml
@@ -1,4 +1,4 @@
-name: Delete Instance and Volume from Workflow
+name: Delete Volume from Workflow
 
 on:
   workflow_dispatch:
@@ -26,7 +26,7 @@ jobs:
       - name: Add comment
         run: |
           gh issue comment $ISSUE_NUMBER \
-            -b "<tt>\delete_all</tt> issued by **delete-instance-and-volume-from-workflow.yml** workflow. \
+            -b "<tt>\delete_volume</tt> issued by **delete-volume-from-workflow.yml** workflow. \
             See details [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -38,19 +38,7 @@ jobs:
         uses: ./.github/actions/delete-volume
         with:
           os_cloud: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           issue_number: ${{ inputs.issue_number }}
           instance_name_prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
           volume_name_suffix: ${{ vars.VOLUME_NAME_SUFFIX }}
-
-      - name: Delete instance
-        id: delete_instance
-        uses: ./.github/actions/control-instance
-        with:
-          os_cloud: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
-          issue_number: ${{ inputs.issue_number }}
-          command_name: "delete"
-          instance_name_prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          string_encryption_key: ${{ secrets.STRING_ENCRYPTION_KEY }}
-          mail_server_username: ${{secrets.MAIL_USERNAME}}
-          mail_server_password: ${{secrets.MAIL_PASSWORD}}
