fix(collect-instance-uptime): Run every 15 minutes (instead of every 5)

--- a/.github/workflows/collect-instance-uptime.yml
+++ b/.github/workflows/collect-instance-uptime.yml
@@ -1,8 +1,8 @@
 name: Collect Instance Uptime
 on:
   schedule:
-    # Run every 5 mins
-    - cron: "* * * * *"
+    # Run every 15 mins
+    - cron: "*/15 * * * *"
   workflow_dispatch:
 
 concurrency:
