feat: Support creating m3.xl, r3.large and r3.xl flavors

--- a/.github/ISSUE_TEMPLATE/request.yml
+++ b/.github/ISSUE_TEMPLATE/request.yml
@@ -14,6 +14,10 @@ body:
       description: Select the type of cloud-computing instance to create.
       options:
         - g3.xl - GPU instance (32 CPUs, 125 GB RAM and A100 GPU)
+        - m3.xl - General-purpose instance (32 CPUs, 125 GB RAM)
+        - r3.large - Large Memory instance (64 CPUs, 500 GB RAM)
+        - r3.xl - Large Memory instance (128 CPUs, 1000 GB RAM)
+
     validations:
       required: true
 
