--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -18,6 +18,8 @@ jobs:
         [
           {"name": "flavor:g3.xl", "color": "D93F0B", "description": "GPU instance (32 CPUs, 125 GB RAM, A100 GPU)"},
           {"name": "flavor:m3.xl", "color": "D93F0B", "description": "General-purpose instance (32 CPUs, 125 GB RAM)"},
+          {"name": "flavor:r3.large", "color": "D93F0B", "description": "Large Memory instance (64 CPUs, 500 GB RAM)"},
+          {"name": "flavor:r3.xl", "color": "D93F0B", "description": "Large Memory instance (128 CPUs, 1000 GB RAM)"},
           {"name": "expiration:60d", "color": "892368", "description": "Instance expires in 60 days unless extended"},
           {"name": "expiration:120d", "color": "892368", "description": "Instance expires in 120 days unless extended"},
           {"name": "expiration:180d", "color": "892368", "description": "Instance expires in 180 days unless extended"},
