fix(retrieve-emails): Simplify and fix workflow
This removes the need for upload/download of artifacts that was not stalling
when a large number of job where triggered.

Limitation: only the emails of the first 1000 approved instances are returned.

--- a/.github/workflows/retrieve-emails.yml
+++ b/.github/workflows/retrieve-emails.yml
@@ -7,121 +7,68 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  retrieve-issue-numbers:
+  retrieve-emails:
     runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.retrieve-issue-numbers.outputs.value }}
-      first-issue-number:
-        ${{ steps.retrieve-issue-numbers.outputs.first-issue-number }}
-      last-issue-number:
-        ${{ steps.retrieve-issue-numbers.outputs.last-issue-number }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Retrieve issue number
-        id: retrieve-issue-numbers
+      - name: Retrieve emails
+        id: retrieve-emails
         run: |
-          # List all approved issues and build a JSON array of their numbers
-          json_array=$(gh issue list \
-            --label "request:approved" \
-            --state all \
-            --limit 500 \
-            --json number |
-              jq -r -c 'sort_by(.number) | map(.number|tostring)')
+          if [[ -z "$ENCRYPTION_KEY" ]]; then
+            echo "::error ::Failed to retrieve emails. ENCRYPTION_KEY is not set."
+            exit 1
+          fi
 
-          # Extract the first and last elements
-          first_issue=$(jq -r '.[0]' <<< "$json_array")
-          echo "first_issue [$first_issue]"
-          last_issue=$(jq -r '.[-1]' <<< "$json_array")
-          echo "last_issue [$last_issue]"
+          # Fetch & sort issue numbers into an array
+          mapfile -t issue_numbers < <(
+            gh issue list \
+              --label "request:approved" \
+              --state all \
+              --limit 1000 \
+              --json number \
+              --jq 'sort_by(.number) | .[].number'
+          )
 
-          echo "value=$json_array" >> $GITHUB_OUTPUT
-          echo "first-issue-number=$first_issue" >> $GITHUB_OUTPUT
-          echo "last-issue-number=$last_issue" >> $GITHUB_OUTPUT
+          emails=()
+
+          # Loop over each issue
+          for issue_number in "${issue_numbers[@]}"; do
+            echo "Processing issue #$issue_number"
+
+            # Extract email
+            email=$(gh issue view $issue_number --json body --jq ".body" | grep -A2 '^### Email' | tail -n1)
+
+            if [[ -z "$email" ]]; then
+              echo "::error ::Failed to extract Email for issue #$issue_number"
+              exit 1
+            fi
+
+            # Check if email is encoded
+            if [[ "$email" != *"@"* ]]; then
+              encoded="true"
+            else
+              encoded="false"
+            fi
+
+            if [[ "$encoded" == "true" ]]; then
+              email=$(echo "$email" | openssl enc -base64 -d -aes-256-cbc -salt -pass pass:$ENCRYPTION_KEY -pbkdf2) \
+              || {
+                echo "::error ::Decryption failed for issue #$issue_number"
+                exit 1
+              }
+            fi
+
+            emails+=("$email")
+          done
+
+          # Join all emails with commas and set output
+          printf -v joined "%s," "${emails[@]}"
+          joined=${joined%,}  # remove trailing comma
+          echo "emails=$joined" >> "$GITHUB_OUTPUT"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  extract-emails:
-    needs: [retrieve-issue-numbers]
-    runs-on: self-hosted
-    strategy:
-      matrix:
-        issue_number: ${{fromJSON(needs.retrieve-issue-numbers.outputs.matrix)}}
-
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          echo "${{ matrix.issue_number }}"
-
-      - name: Extract fields
-        id: extract
-        uses: ./.github/actions/extract-issue-fields
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          issue_number: ${{ matrix.issue_number }}
-
-      - name: Check if email is encoded
-        id: check_email_encryption
-        shell: bash
-        run: |
-          if [[ "$EMAIL" != *"@"* ]]; then
-            encoded="true"
-          else
-            encoded="false"
-          fi
-          echo "encoded=$encoded" >> $GITHUB_OUTPUT
-        env:
-          EMAIL: ${{ steps.extract.outputs.email }}
-
-      - name: Decode email
-        id: decode_email
-        uses: ./.github/actions/encode-decode-string
-        with:
-          input_string: ${{ steps.extract.outputs.email }}
-          encryption_key: ${{ secrets.STRING_ENCRYPTION_KEY }}
-          operation: "decode"
-          skip: ${{ steps.check_email_encryption.outputs.encoded == 'false' }}
-
-      - name: Write email to file
-        run: |
-          echo "::add-mask::$EMAIL"
-          mkdir -p email
-          echo "$EMAIL" > email/extracted-${{ matrix.issue_number }}.txt
-        env:
-          EMAIL: ${{ steps.decode_email.outputs.output_string }}
-
-      - name: Upload extracted email artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: email-${{ matrix.issue_number }}
-          path: email/extracted-${{ matrix.issue_number }}.txt
-          compression-level: 1
-          retention-days: 1
-        env:
-          # See https://github.com/actions/upload-artifact/issues/623
-          ACTIONS_ARTIFACT_UPLOAD_CONCURRENCY: 5
-
-  send-email:
-    needs: [retrieve-issue-numbers, extract-emails]
-    runs-on: self-hosted
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download all email artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: emails/
-          merge-multiple: true
-
-      - name: Aggregate emails into a single list
-        id: aggregate
-        run: |
-          # concatenate all the little files into one comma‑separated list
-          emails=$(find emails/ -name 'extracted-*.txt' -exec cat {} \; | paste -sd, -)
-          echo "::add-mask::$emails"
-          echo "emails=$emails" >> $GITHUB_OUTPUT
+          ENCRYPTION_KEY: ${{ secrets.STRING_ENCRYPTION_KEY }}
 
       - name: Send mail
         uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
@@ -134,11 +81,14 @@ jobs:
           from: MorphoCloudPortal
           to: ${{ vars.MORPHOCLOUD_GITHUB_ADMIN_EMAILS }}
           subject:
-            "[${{ github.event.repository.name }}] List of emails for instances
-            ${{ needs.retrieve-issue-numbers.outputs.first-issue-number }} to
-            ${{ needs.retrieve-issue-numbers.outputs.last-issue-number }}"
+            "[${{ github.event.repository.name }}] List of emails for approved
+            instances"
           convert_markdown: true
           html_body: |
-            Emails: `${{ steps.aggregate.outputs.emails }}`
+            Below is the list of decrypted email addresses for all `request:approved` instances (up to 1000):
+
+            ```
+            ${{ steps.retrieve-emails.outputs.emails }}
+            ```
 
             _Requested by ${{ github.actor }}. See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}._
