feat(control-instance): Display internal IP metadata
This should help troubleshoot unshelving issue related to message like
the following:

> ConflictException: 409: Client Error for url: https://js2.jetstream-cloud.org:9696/v2.0/floatingips/44eb2c5c-8064-4a7a-84bf-3cee823f55be,
> Cannot associate floating IP 149.165.151.18 (44eb2c5c-8064-4a7a-84bf-3cee823f55be) with port 54290b44-a0d0-4035-920f-b633da040dbb using fixed IP 10.0.16.43, as that fixed IP already has a floating IP on external network 3fe22c05-6206-4db2-9a13-44f04b6796e6.

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -140,6 +140,12 @@ runs:
         )
         echo "instance_internal_ip [$instance_internal_ip]"
 
+        # Display internal IP metadata
+        echo "instance_internal_ip [$instance_internal_ip] metadata:"
+        openstack floating ip list -f json | jq \
+          --arg fixed_ip "$instance_internal_ip" \
+          'map(select(."Fixed IP Address" == $fixed_ip))'
+
         # Determine if instance already has a floating IP assigned
         if [[ -n "$instance_ip" ]]; then
           has_ip="true"
@@ -149,7 +155,7 @@ runs:
         echo "has_ip [$has_ip]"
         echo "has_ip=$has_ip" >> $GITHUB_OUTPUT
 
-        # Check if an unassigned floating IP matches instance IP
+        # Check if an assigned floating IP matches instance IP
         has_ip_assigned="false"
         if [[ "$has_ip" == "true" ]]; then
           json_output=$(openstack floating ip list -f json | jq \
@@ -163,7 +169,7 @@ runs:
           fi
         fi
 
-        # If previously assigned IP is not available anymore, discard it.
+        # If previously assigned IP (`instance_ip`) is not available anymore, discard it.
         if [[ "$has_ip" == "true" && "$has_ip_assigned" == "false" ]]; then
           json_output=$(openstack floating ip list -f json | jq \
             --arg fixed_ip "$instance_internal_ip" \
