--- a/.github/actions/send-email/action.yml
+++ b/.github/actions/send-email/action.yml
@@ -91,7 +91,7 @@ runs:
         html_body: |
           Your MorphoCloud instance is up and running:
 
-          * **Graphical User Interface (GUI)**: Use the weblink provided below to access your instance.
+          * **Graphical User Interface (GUI)**: Use the URL provided to connect from a web browser. For improved performance and responsiveness, you may also use a dedicated TurboVNC client.
           * **Command Line Access**: Use the SSH information provided below to access your instance
           from the command line.
 
@@ -109,6 +109,7 @@ runs:
 
           **Connection Methods:**
 
+          - TurboVNC: `${{ steps.instance_metadata.outputs.instance_ip }}:1`
           - Web connect: ${{ steps.guacamole.outputs.connection_url }}
           - SSH: `ssh exouser@${{ steps.instance_metadata.outputs.instance_ip }}`
 
