fix(send-email): Update notes describing session timeout and how to extend
Co-authored-by: muratmaga <muratmaga@outlook.com>

--- a/.github/actions/send-email/action.yml
+++ b/.github/actions/send-email/action.yml
@@ -99,7 +99,11 @@ runs:
 
           **Important Notes:**
 
-          - Each session is limited to 4h, after which your instance is automatically shelved.
+          - Each session is limited to 4 hours. **Without explicit action, your instance will be automatically shelved after this time.** Around 3h30m into your session,
+            a popup will appear in the graphical interface asking whether you'd like to extend your session — clicking "Yes" will delay shelving by another 4 hours.
+            Alternatively, you can extend the session at any time before the timeout by clicking the **"ExtendInstanceSession" icon on the desktop**.
+            If no action is taken, the instance will be shelved and all GUI or SSH connections will be disconnected. Your data will be preserved and the instance can
+            later be unshelved.
           - To unshelve an existing instance, use the`/unshelve` command.
           - To shelve an instance and preserve your allocation, use the `/shelve` command.
           - To obtain the latest set of access credentials, use the `/email` command.
