wip: Support for workshop

--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -26,8 +26,12 @@ jobs:
           {"name": "expiration:180d", "color": "892368", "description": "Instance expires in 180 days unless extended"},
           {"name": "request:approved", "color": "027210", "description": "Instance has been approved for creation and is being provisioned"},
           {"name": "request-type:instance", "color": "0A84FF", "description": "Issue tracks a single instance request"},
+          {"name": "request-type:workshop", "color": "0A84FF", "description": "Issue tracks a workshop bulk instance request"},
           {"name": "renewed:1", "color": "1550D4", "description": "Instance lifespan renewed once"},
           {"name": "renewed:2", "color": "1550D4", "description": "Instance lifespan renewed twice"},
+          {"name": "workflow:creating-instances", "color": "5319E7", "description": "Workshop instances are currently being created"},
+          {"name": "workflow:instances-created", "color": "5319E7", "description": "All workshop instances were created"},
+          {"name": "workflow:instances-deleted", "color": "5319E7", "description": "Workshop instances were deleted"},
           {"name": "status:active", "color": "CFD3D7", "description": "The server is active."},
           {"name": "status:build", "color": "CFD3D7", "description": "The server has not yet finished the original build process."},
           {"name": "status:deleted", "color": "CFD3D7", "description": "The server is deleted."},
