chore: Rename issue template from "request" to "instance-request"

--- a/.github/ISSUE_TEMPLATE/instance-request.yml
+++ b/.github/ISSUE_TEMPLATE/instance-request.yml
@@ -1,5 +1,5 @@
-name: Request Instance
-description: Issue template to request a cloud instance creation.
+name: Instance Request
+description: Issue template to request an individual cloud instance.
 title: "Instance: "
 
 body:
@@ -18,7 +18,6 @@ body:
         - m3.xl - General-purpose instance (32 CPUs, 125 GB RAM)
         - r3.large - Large Memory instance (64 CPUs, 500 GB RAM)
         - r3.xl - Large Memory instance (128 CPUs, 1000 GB RAM)
-
     validations:
       required: true
 
