chore: Associate "request-type:instance" label with instance request

--- a/.github/ISSUE_TEMPLATE/instance-request.yml
+++ b/.github/ISSUE_TEMPLATE/instance-request.yml
@@ -1,6 +1,8 @@
 name: Instance Request
 description: Issue template to request an individual cloud instance.
 title: "Instance: "
+labels:
+  - request-type:instance
 
 body:
   - type: markdown
