--- a/.github/workflows/approve-instance.yml
+++ b/.github/workflows/approve-instance.yml
@@ -8,7 +8,8 @@ jobs:
   approve:
     runs-on: ubuntu-latest
     if:
-      ${{ !github.event.issue.pull_request && (
+      ${{ !github.event.issue.pull_request &&
+      contains(github.event.issue.labels.*.name, 'request-type:instance') && (
       contains(github.event.comment.body, '/approve') ||
       contains(github.event.comment.body, '/unapprove')) }}
     steps:
