--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -8,7 +8,8 @@ jobs:
   create:
     runs-on: self-hosted
     if:
-      ${{ !github.event.issue.pull_request && (
+      ${{ !github.event.issue.pull_request &&
+      contains(github.event.issue.labels.*.name, 'request-type:instance') && (
       contains(github.event.comment.body, '/create') ) }}
     steps:
       - name: create command
