--- a/.github/workflows/request-notify-admin.yml
+++ b/.github/workflows/request-notify-admin.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   request_notify_admins:
+    if:
+      ${{ contains(github.event.issue.labels.*.name, 'request-type:instance') }}
     runs-on: ubuntu-latest
     steps:
       - name: Collect Inputs
@@ -29,35 +31,16 @@ jobs:
         env:
           EVENT_NAME: ${{ github.event_name }}
 
-      - name: Ensure instance request
-        id: ensure_instance_request
-        run: |
-          labels=$(gh issue view "$ISSUE_NUMBER" --repo "$GH_REPO" --json labels | jq -r '.labels[].name')
-          echo "labels [$labels]"
-          if printf '%s\n' "$labels" | grep -Fxq 'request-type:instance'; then
-            echo "is_instance=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "is_instance=false" >> "$GITHUB_OUTPUT"
-            echo "Skipping issue $ISSUE_NUMBER because it does not have label request-type:instance"
-          fi
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
-          ISSUE_NUMBER: ${{ steps.collect_inputs.outputs.issue_number }}
-
       - uses: actions/checkout@v5
-        if: ${{ steps.ensure_instance_request.outputs.is_instance == 'true' }}
 
       - name: Define instance name
         id: define
-        if: ${{ steps.ensure_instance_request.outputs.is_instance == 'true' }}
         uses: ./.github/actions/define-instance-name
         with:
           prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
           issue_number: ${{ steps.collect_inputs.outputs.issue_number }}
 
       - name: Send mail (approval requested)
-        if: ${{ steps.ensure_instance_request.outputs.is_instance == 'true' }}
         uses: dawidd6/action-send-mail@6d98ae34d733f9a723a9e04e94f2f24ba05e1402 # v6
         with:
           server_address: smtp.gmail.com
