feat: route instance-request post-creation processing through reusable workflows
Introduces an orchestrator workflow that calls the labeler, initial-comment,
and admin-notify jobs via workflow_call, adds the `request-creator:user` label
to the template, and registers the new label in `labels.yml`.

Introducing the `request-creator:user` label will ensure that issue created
from `create-workshop.yml` do not trigger the automatic execution of the orchestrator
workflow

--- a/.github/ISSUE_TEMPLATE/instance-request.yml
+++ b/.github/ISSUE_TEMPLATE/instance-request.yml
@@ -3,6 +3,7 @@ description: Issue template to request an individual cloud instance.
 title: "Instance: "
 labels:
   - request-type:instance
+  - request-creator:user
 
 body:
   - type: markdown
