--- a/.github/workflows/request-notify-admin.yml
+++ b/.github/workflows/request-notify-admin.yml
@@ -1,13 +1,16 @@
 name: "Notify Admins of Instance Request"
 on:
-  issues:
-    types:
-      - opened
   workflow_dispatch:
     inputs:
       issue_number:
         description: "Issue number"
         required: true
+  workflow_call:
+    inputs:
+      issue_number:
+        description: "Issue number"
+        required: true
+        type: number
 
 jobs:
   request_notify_admins:
@@ -21,7 +24,7 @@ jobs:
           echo "EVENT_NAME [$EVENT_NAME]"
           if [[ "$EVENT_NAME" == "issues" ]]; then
             issue_number=${{ github.event.issue.number }}
-          elif [[ "$EVENT_NAME" == "workflow_dispatch" ]]; then
+          elif [[ "$EVENT_NAME" == "workflow_dispatch" || "$EVENT_NAME" == "workflow_call" ]]; then
             issue_number=${{ github.event.inputs.issue_number }}
           else
             echo "::error ::Unsupported EVENT_NAME [$EVENT_NAME]"
