fix: Explicitly call labeler, initial-comment, and admin-notify from create-instannce-from-workflow
This ensures all required steps are completed before initiating the instance creation.

--- a/.github/workflows/create-instance-from-workflow.yml
+++ b/.github/workflows/create-instance-from-workflow.yml
@@ -18,6 +18,24 @@ permissions:
   checks: read
 
 jobs:
+  call-request-labeler:
+    uses: ./.github/workflows/request-labeler.yml
+    with:
+      issue_number: ${{ inputs.issue_number }}
+    secrets: inherit
+
+  call-request-initial-comments:
+    uses: ./.github/workflows/request-initial-comments.yml
+    with:
+      issue_number: ${{ inputs.issue_number }}
+    secrets: inherit
+
+  call-request-notify-admin:
+    uses: ./.github/workflows/request-notify-admin.yml
+    with:
+      issue_number: ${{ inputs.issue_number }}
+    secrets: inherit
+
   control:
     runs-on: self-hosted
     steps:
